--- a/patients/templates/patients/base_generic.html
+++ b/patients/templates/patients/base_generic.html
@@ -1,11 +1,28 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hedghog project</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <title>Hedgehogs</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">\
+    <link rel="stylesheet" href="{% static 'floating_button.css' %}">
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light justify-content-between">
+        <a class="navbar-brand" href="#">
+        <img src="{% static 'bh.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">           Hedgehog Project
+        </a>
+        {% if user.is_authenticated %}
+            <div>
+                <span class="navbar-text">
+                    Logged in as: {{ user.username }}
+                </span>
+                <a class="btn btn-outline-secondary" href="{% url 'logout' %}">Logout</a>
+            </div>
+        {% else %}
+            <a class="btn btn-outline-primary" href="{% url 'login' %}">Login</a>
+        {% endif %}
+    </nav>
     <div class="container">
         {% block content %}{% endblock %}
     </div>
